--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
-Django>=3.0,<4.0
-psycopg2>=2.8
+asgiref==3.7.2
+Django==3.2.20
+djangorestframework==3.14.0
+psycopg2==2.9.6
+pytz==2023.3
+sqlparse==0.4.4
